# Ketch-up-prototype

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
core/: data.py  web.py
data/players/: 236257776421175296.json
static/css/: whateveryouwant.css
templates/: index.html
web/: combat.py  game.py  index.py  oauth.py  rooms.py  timer.py
