[tool.poetry]
name = "repl_nix_Ketchup"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
Flask-SocketIO = "^5.3.1"
Flask-Discord = "^0.1.69"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
